added updateBeerById in jpa and test with minor updates